[package]
name = "gorilla"
version = "0.2.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
rust-version = "1.60"
description = "An implementation of Gorilla compression for Rust"
documentation = "https://docs.rs/gorilla"
readme = "README.md"
homepage = "https://github.com/udoprog/gorilla"
repository = "https://github.com/udoprog/gorilla"
license = "MIT OR Apache-2.0"
keywords = ["compression", "gorilla", "series", "time"]
categories = ["compression"]

[dependencies]
bit-vec = "0.6.3"
byteorder = "1.4.3"
